Topic Entity Crud

--- a/Podcast.MVC/Areas/Admin/Views/Topic/Index.cshtml
+++ b/Podcast.MVC/Areas/Admin/Views/Topic/Index.cshtml
@@ -23,10 +23,10 @@
                             <tr>
                                 <td>@item.Name</td>
                                 <td>
-                                    <a asp-controller="course" asp-action="update" asp-route-id="@item.Id" class="btn btn-primary">Update </a>
+                                    <a asp-controller="topic" asp-action="update" asp-route-id="@item.Id" class="btn btn-primary">Update </a>
                                 </td>
                                 <td>
-                                    <a asp-controller="course" asp-action="delete" asp-route-id="@item.Id" class="btn btn-primary deleteBtn">Delete</a>
+                                    <a asp-controller="topic" asp-action="delete" asp-route-id="@item.Id" class="btn btn-primary deleteBtn">Delete</a>
                                 </td>
                             </tr>
                         }
