--- a/Podcast.MVC/Areas/Admin/Views/Topic/Update.cshtml
+++ b/Podcast.MVC/Areas/Admin/Views/Topic/Update.cshtml
@@ -1,5 +1,5 @@
 ﻿@using Podcast.BLL.ViewModels.TopicViewModels
-@model TopicCreateViewModel
+@model TopicUpdateViewModel
 <div class="col-md-6 grid-margin stretch-card">
     <div class="card">
         <div class="card-body">
