--- a/Podcast.MVC/Views/Home/Index.cshtml
+++ b/Podcast.MVC/Views/Home/Index.cshtml
@@ -164,7 +164,7 @@
                 <div class="col-lg-3 col-md-6 col-12 mb-4 mb-lg-0">
                 <div class="custom-block custom-block-overlay">
                     <a href="detail-page.html" class="custom-block-image-wrap">
-                        <img src="~/admin/~/images/topics/@item.CoverUrl" class="custom-block-image img-fluid" alt="">
+                        <img src="~/images/topics/@item.CoverUrl" class="custom-block-image img-fluid" alt="">
                     </a>
 
                     <div class="custom-block-info custom-block-overlay-info">
